fix logo not sizing properly for phone screens

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -244,6 +244,10 @@ body{
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
+    .logo{
+        width: 30%;
+    }
+
     .NavBarLinks.show {
         display: flex;
     }
