--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -245,7 +245,11 @@ body{
     }
 
     .logo{
-        width: 30%;
+        width: 70%;
+        img{
+            height: 70%;
+            width: 70%;
+        }
     }
 
     .NavBarLinks.show {
