--- a/styles/staffStyleSheet.css
+++ b/styles/staffStyleSheet.css
@@ -37,6 +37,17 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
+    p{
+        text-align: justify;
+        line-height: 1.3em;
+    }
+}
+
+.first_letter::first-letter{
+    font-size: 2.5em;
+    font-weight: bold;
+    float: left;
+    line-height: 1;
 }
 
 .more-button{
@@ -56,12 +67,20 @@
 
 /*medium step */
 @media screen and (min-width: 800px) and (max-width: 1100px) {
-
+    .staff-contents{
+        p{
+            text-align: center;
+        }
+    }
 }
 
 /*smallest step*/
 @media screen and (max-width: 800px) {
+    .staff-box{
+        margin-inline: 8%;
+    }
     .staff-container{
+        padding: 30px 30px;
         flex-direction: column;
     }
     .staff-contents{
