--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -269,7 +269,7 @@ body{
 
     /*End Card*/
     .Map-location{
-        width: 70%;
+        width: 50%;
     }
     .ExtraInfo{
         width: 30%;
@@ -302,6 +302,7 @@ body{
     }
 
     .EndCardLinks{
+        margin-right: 40%;
         flex-direction: column;
     }
     .end-card-links{
