--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,6 +4,17 @@ body{
     background: white;
     font-family: "roboto", sans-serif;
 }
+/*theme change normal*/
+.TCN{
+    background: #2c2c2c !important;
+    color: white !important;
+    border-color: #575757 !important;
+}
+/*theme change end*/
+.TCE{
+    background: #003153 !important;
+    color: white !important;
+}
 
 .prevent-select {
     -webkit-user-select: none; /* Safari */
@@ -57,6 +68,17 @@ body{
     margin-top: 10px;
     height: 3px;
     background-color: black;
+    width: 100%;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.4s ease;
+    border-radius: 20px;
+}
+
+.NavBarLinks.TCN li div {
+    margin-top: 10px;
+    height: 3px;
+    background-color: white !important;
     width: 100%;
     transform: scaleX(0);
     transform-origin: center;
@@ -147,20 +169,25 @@ body{
 .fa:hover{
     background: #dcdcdc;
 }
-.fa-github{
-    color: black;
+.fa-facebook{
+    color: blue;
     background: #eaeaea;
 }
-.fa-instagram{
-    color: black;
+.fa-twitter{
+    color: lightskyblue;
     background: #eaeaea;
 }
-.fa-rss{
-    color: orange;
+.fa-youtube{
+    color: red;
     background: #eaeaea;
 }
 .fa-linkedin{
     color: lightskyblue;
+    background: #eaeaea;
+}
+
+.fa-moon-o{
+    color: black;
     background: #eaeaea;
 }
 
